# contrib_update-notifier

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: checker.manifest  checker.rc  checker.vbs  checker_config.json  config.json  installer.xsl  memcheck.supp  notifier.manifest  notifier.rc  version.json
resources/linux/: CMakeLists.txt
resources/linux_cmake/: CMakeLists.txt
src/: CheckerException.hpp  Config.hpp  FileDescriptor.cpp  FileDescriptor.hpp  JsonRecord.cpp  JsonRecord.hpp  Tracer.cpp  Tracer.hpp  Version.hpp  checker.cpp  fetchurl.cpp  fetchurl.hpp  jsonio.cpp  jsonio.hpp  main.cpp  notifier.cpp  notifier.hpp  notifier.rc  platform.hpp  platform_linux.cpp  platform_windows.cpp  transform.cpp  transform.hpp  utils.cpp  utils.hpp
